Agregada Actividad de Favoritos

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         <ImageView
             android:id="@+id/imgLogo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="202dp"
             android:src="@drawable/logo"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             />
