--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,38 +3,42 @@
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:minHeight="?attr/actionBarSize"
     android:elevation="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/logoBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        >
 
         <ImageView
             android:id="@+id/btnFavorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:clickable="true"
+            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="16dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginRight="11dp"
+            android:layout_marginEnd="11dp" />
 
         <TextView
             android:id="@+id/titleBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:textSize="20sp"
+            android:layout_alignBottom="@+id/btnFavorites"
             android:layout_toRightOf="@+id/logoBar"
-            android:layout_toEndOf="@+id/logoBar"
-            android:textSize="25sp"
-            android:clickable="true"
-            />
+            android:layout_toEndOf="@+id/logoBar" />
+
+        <ImageView
+            android:id="@+id/logoBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
