--- a/app/src/main/res/layout/rows.xml
+++ b/app/src/main/res/layout/rows.xml
@@ -17,23 +17,24 @@
             android:scaleType="fitXY"
             />
 
-        <ImageView
-            android:id="@+id/bone"
+        <Button
+            android:id="@+id/btnLike"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/bone"
             android:layout_below="@id/imgPets"
             android:layout_marginBottom="10dp"
+            android:clickable="true"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Roony"
-            android:layout_alignBottom="@+id/bone"
-            android:layout_toRightOf="@+id/bone"
-            android:layout_toEndOf="@+id/bone"
+            android:layout_alignBottom="@+id/btnLike"
+            android:layout_toRightOf="@+id/btnLike"
+            android:layout_toEndOf="@+id/btnLike"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
             android:textSize="@dimen/activity_horizontal_margin"
@@ -44,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/notfavorite"
-            android:layout_alignTop="@+id/tvCalification"
+            android:layout_alignTop="@+id/tvRating"
             android:layout_alignRight="@+id/imgPets"
             android:layout_alignEnd="@+id/imgPets" />
 
@@ -53,10 +54,12 @@
             android:layout_height="wrap_content"
             android:text="0"
             android:textSize="@dimen/activity_horizontal_margin"
-            android:id="@+id/tvCalification"
+            android:id="@+id/tvRating"
             android:layout_alignBaseline="@+id/tvPet"
             android:layout_alignBottom="@+id/tvPet"
             android:layout_toLeftOf="@+id/active"
-            android:layout_toStartOf="@+id/active" />
+            android:layout_toStartOf="@+id/active"
+            android:clickable="true"
+            />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
